--- a/build.xml
+++ b/build.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0"?>
+<?xml-model href="build.xsd"?>
 <project name="CoffeeMaker" default="compile" basedir=".">
 
     <!-- Configuration for cobertura -->
